Changelog
=========

1.2 (unreleased)
----------------

- Nothing changed yet.


1.1 (2014-01-30)
----------------

* Add id to the login-portlets div, ensuring the element can be selected
  on the page.
  [davidjb]
* Improve styles for login page, normalising with logged out page.
  [davidjb]
* Add logged out page templates to display pluggable login.
  [davidjb]
* Improve styles and formatting for login page.
  [davidjb]
* Fix issue with empty <div> generated on login page after trailing </html>
  end tag.
  [davidjb]


1.0 (2012-05-10)
----------------

* Initial implementation
  [davisagli]