@@ -4,7 +4,9 @@ Changelog
 1.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Allow the registration portlet to work with both new (z3cform) and
+  old-style (zope.formlib) register forms.
+  [davidjb]
 
 
 1.1 (2014-01-30)
